fix: java 8 compilation errors
Signed-off-by: Michael Reichenbach <michael@reichenbach.in>